--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "# confirm that our new database was created\n",
+    "# confirming that our new database was created\n",
     "print(mongo.list_database_names())"
    ]
   },
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assign the uk_food database to a variable name\n",
+    "# assigning the uk_food database to a variable name\n",
     "db = mongo['uk_food']"
    ]
   },
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "# review the collections in our new database\n",
+    "# reviewing the collections in our new database\n",
     "print(db.list_collection_names())"
    ]
   },
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "# review a document in the establishments collection\n",
+    "# reviewing a document in the establishments collection\n",
     "pprint(db.establishments.find_one())"
    ]
   },
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assign the collection to a variable\n",
+    "# assigning the collection to a variable\n",
     "establishments = db['establishments']"
    ]
   },
@@ -184,32 +184,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Creating a dictionary for the new restaurant data\n",
+    "penang_flavours = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x231815b5988>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Inserting the new restaurant into the collection\n",
+    "establishments.insert_one(penang_flavours)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "63bb10f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('641bcdc0347fdacda99d4da9'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Checking that the new restaurant was inserted\n",
+    "pprint(establishments.find_one({\"BusinessName\": penang_flavours[\"BusinessName\"]}))"
    ]
   },
   {
@@ -222,12 +290,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e2f4')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e2f6')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e2f8')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e2f9')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e2fa')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e2fb')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e2fc')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e2fd')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e300')},\n",
+      " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bc7fdd5a0d3d5d356e305')}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "# Creating query\n",
+    "query = {\"BusinessType\":\"Restaurant/Cafe/Canteen\"}\n",
+    "\n",
+    "# Specifying desired fields\n",
+    "fields = {\"BusinessType\": 1, \"BusinessTypeID\": 1}\n",
+    "\n",
+    "# setting a limit for 10 results\n",
+    "limit = 10\n",
+    "\n",
+    "# Casting the results as a list and saving them to a variable\n",
+    "results = list(establishments.find(query, fields).limit(limit))\n",
+    "\n",
+    "# Pretty printing the results\n",
+    "pprint(results)"
    ]
   },
   {
@@ -240,22 +359,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x231806ee048>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Updating the new restaurant with the correct BusinessTypeID\n",
+    "establishments.update_one({\"BusinessName\":\"Penang Flavours\"}, {'$set': {\"BusinessTypeID\":1}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'BusinessName': 'Penang Flavours',\n",
+      "  'BusinessTypeID': 1,\n",
+      "  '_id': ObjectId('641bcdc0347fdacda99d4da9')}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirming that the new restaurant was updated\n",
+    "# Query to extract restuaruant\n",
+    "query = {\"BusinessName\":\"Penang Flavours\"}\n",
+    "\n",
+    "# Selecting desired fields\n",
+    "fields = {\"BusinessName\": 1, \"BusinessTypeID\": 1}\n",
+    "\n",
+    "# Saving to results to variable\n",
+    "results = list(establishments.find(query, fields))\n",
+    "\n",
+    "# Pretty printing the results\n",
+    "pprint(results)"
    ]
   },
   {
@@ -268,42 +420,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "768474a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of documents with LocalAuthorityName as Dover: 994\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "# Creating query for desired documents\n",
+    "query = {\"LocalAuthorityName\":\"Dover\"}\n",
+    "\n",
+    "# Counting and printing number of documents matching query\n",
+    "print(\"Number of documents with LocalAuthorityName as Dover:\", establishments.count_documents(query))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a11d5f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x231815fe488>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Deleting all documents where LocalAuthorityName is \"Dover\"\n",
+    "# Creating query for Dover documents\n",
+    "query = {\"LocalAuthorityName\":\"Dover\"}\n",
+    "\n",
+    "# Deleting all documents matching the query\n",
+    "establishments.delete_many(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "2a51aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of documents with LocalAuthorityName as Dover: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "# Creating query for Dover documents\n",
+    "query = {\"LocalAuthorityName\":\"Dover\"}\n",
+    "\n",
+    "# Counting and printing number of documents matching query\n",
+    "print(\"Number of documents with LocalAuthorityName as Dover:\", establishments.count_documents(query))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "8c356f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('641bc7fdd5a0d3d5d356e5db'),\n",
+      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Checking that other documents remain with 'find_one'\n",
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
@@ -316,32 +554,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x231826c0b08>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude\n"
+    "# Change the data type from String to Decimal for longitude\n",
+    "establishments.update_many({}, [ {'$set':{ \"geocode.longitude\" : {'$toDecimal': \"$geocode.longitude\"}}} ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "08dd7c72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x2318160c048>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for latitude\n"
+    "# Change the data type from String to Decimal for latitude\n",
+    "establishments.update_many({}, [ {'$set':{ \"geocode.latitude\" : {'$toDecimal': \"$geocode.latitude\"}}} ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "0deacaf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'_id': ObjectId('641bc7fdd5a0d3d5d356e5db'),\n",
+      "  'geocode': {'latitude': Decimal128('51.083812'),\n",
+      "              'longitude': Decimal128('1.195625')}},\n",
+      " {'_id': ObjectId('641bc7fdd5a0d3d5d356e5dc'),\n",
+      "  'geocode': {'latitude': Decimal128('51.086058'),\n",
+      "              'longitude': Decimal128('1.196408')}},\n",
+      " {'_id': ObjectId('641bc7fdd5a0d3d5d356e5de'),\n",
+      "  'geocode': {'latitude': Decimal128('51.085797'),\n",
+      "              'longitude': Decimal128('1.194762')}},\n",
+      " {'_id': ObjectId('641bc7fdd5a0d3d5d356e5e0'),\n",
+      "  'geocode': {'latitude': Decimal128('51.08084'),\n",
+      "              'longitude': Decimal128('1.188537')}},\n",
+      " {'_id': ObjectId('641bc7fdd5a0d3d5d356e5e1'),\n",
+      "  'geocode': {'latitude': Decimal128('51.08084'),\n",
+      "              'longitude': Decimal128('1.188537')}}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the coordinates are now numbers\n"
+    "# Check that the coordinates are now numbers\n",
+    "query = {}\n",
+    "\n",
+    "# Specifying desired fields\n",
+    "fields = {\"geocode.longitude\": 1, \"geocode.latitude\": 1}\n",
+    "\n",
+    "# setting a limit for 10 results\n",
+    "limit = 5\n",
+    "\n",
+    "# Casting the results as a list and saving them to a variable\n",
+    "results = list(establishments.find(query, fields).limit(limit))\n",
+    "\n",
+    "# Pretty printing the results\n",
+    "pprint(results)"
    ]
   }
  ],
