--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -631,7 +631,7 @@
     "# Specifying desired fields\n",
     "fields = {\"geocode.longitude\": 1, \"geocode.latitude\": 1}\n",
     "\n",
-    "# setting a limit for 10 results\n",
+    "# Setting a limit for 10 results\n",
     "limit = 5\n",
     "\n",
     "# Casting the results as a list and saving them to a variable\n",
