--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,10 @@
       "              'longitude': Decimal128('1.188537')}},\n",
       " {'_id': ObjectId('641bc7fdd5a0d3d5d356e5e1'),\n",
       "  'geocode': {'latitude': Decimal128('51.08084'),\n",
-      "              'longitude': Decimal128('1.188537')}}]\n"
+      "              'longitude': Decimal128('1.188537')}}]\n",
+      "--------------------------------------\n",
+      "The data type for longitude is: <class 'bson.decimal128.Decimal128'>\n",
+      "The data type for latitude is: <class 'bson.decimal128.Decimal128'>\n"
      ]
     }
    ],
@@ -638,7 +641,13 @@
     "results = list(establishments.find(query, fields).limit(limit))\n",
     "\n",
     "# Pretty printing the results\n",
-    "pprint(results)"
+    "pprint(results)\n",
+    "print('--------------------------------------')\n",
+    "\n",
+    "# Printing data types of one result\n",
+    "for i in range(1):\n",
+    "    print('The data type for longitude is:', type(results[0]['geocode']['longitude']))\n",
+    "    print('The data type for latitude is:', type(results[0]['geocode']['latitude']))\n"
    ]
   }
  ],
